# intelligent_diversification

./: .env  main.py  pyproject.toml
data/ohlcv/: ADA-USDC.parquet  AVAX-USDC.parquet  DOGE-USDC.parquet  SOL-USDC.parquet
data_cleaned/: DOGE-USDC.parquet  SOL-USDC.parquet
src/: main.ipynb
src/data/: ADA-USDC.parquet  AVAX-USDC.parquet  DOGE-USDC.parquet  LINK-USDC.parquet  LTC-USDC.parquet  SOL-USDC.parquet  XRP-USDC.parquet
src/data_cleaned/: ADA-USDC.parquet  AVAX-USDC.parquet  DOGE-USDC.parquet  LINK-USDC.parquet  LTC-USDC.parquet  XRP-USDC.parquet
src/exchange/: get_ohlcv.py
src/feature_engineering/: technical_indicators.py
src/file_ops/: ohlcv.py
src/ml_xgboost/: predictions.py  price_validation.py
src/optimization/: optimization_simulation.py  simulation.py
src/utils/: ffill_impute.py  get_kaggle.py  vif.py
