[project]
name = "intelligent-diversification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.5.31",
    "cvxpy>=1.7.5",
    "dotenv>=0.9.9",
    "jupyterlab>=4.5.1",
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "plotly>=5.24.1",
    "polars>=1.36.1",
    "polars-talib>=0.1.5",
    "pyarrow>=22.0.0",
    "pyportfolioopt>=1.5.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
